Fix conflict when placing order